# pauldglenn.github.io

./: .gitignore  .gitmodules  CNAME  README.md  archives.html  authors.html  categories.html  create_favicon.py  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: pelican.yml
articles/analytics-engineering-at-spotify/: index.html
articles/ode-to-a-school-of-information/: index.html
articles/taking-the-challenge-to-work-the-polls/: index.html
author/: paul-glenn.html
category/: articles.html  writing.html
content/: index.md
content/articles/: analytics-engineering-at-spotify.md  ode-to-a-school-of-information.md  taking-the-challenge-to-work-the-polls.md
content/pages/: contact.md  resume.md
feeds/: all.atom.xml  articles.atom.xml  writing.atom.xml
pages/contact/: index.html
pages/resume/: index.html
src/personal_website/: __init__.py
tag/: analytics.html  civic-engagement.html  commencement.html  data.html  education.html  elections.html  engineering.html  information-science.html  personal-experience.html  speech.html  spotify.html
