[project]
name = "personal-website"
version = "0.1.0"
description = "A static personal website built with Pelican"
requires-python = ">=3.8"
dependencies = [
    "pelican==4.8.0",
    "markdown==3.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_website"]

[tool.pelican]
# Pelican configuration can be added here if needed
# This section is optional and can be used to override pelicanconf.py settings 